--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://localhost:4000/" />
-  <meta property="og:description" content=" A free and open-source reference guide that explains how to use Markdown." />
+  <meta property="og:description" content="Information about Algowit" />
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
